...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/featured_recipe_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="?attr/colorPrimary"
        android:fontFamily="sans-serif-medium"
...
